# jsc-voice

./: .env.example  .gitignore  README.md  pyproject.toml  tts-app.py
application/: .env.example  README.md  pyproject.toml  run.sh  server.py  speech_to_text.py  tts-app.py
application/ollama/: fetch.py
application/sparktts/modules/speaker/: speaker_encoder.py
application/storyteller/: conversation.py  processor.py  story_client.py
application/tts/: Spark.py  TextToSpeech.py
application/tts/model/: SparkConfiguration.py
application/util/: logger.py
dia/: model.py
sparktts/cli/: SparkTTS.py
tts/: .env.example  .gitignore  Spark.py  TextToSpeech.py  pyproject.toml  tts-init.py
tts/server/: server.py
tts/sparktts/models/: bicodec.py
tts/tts/model/: SparkArgument.py
util/: config.py  logger.py
